<resources>
    <string name="app_name">Centimapp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="barra_mes">Month</string>
    <string name="barra_año">Year</string>
    <string name="barra_semana">Week</string>
    <string name="barra_hoy">Today</string>
    <string name="nueva_entrada">New Entry</string>
    <string name="texto_tipoMov">Movement type</string>
    <string name="texto_cantidad">Quantity</string>
    <string name="title">Title</string>
    <string name="enter_title">Enter the title here</string>
    <string name="description">Description</string>
    <string name="save">Save</string>

    <string-array name="movementTypes">
        <item>Entry</item>
        <item>Expense</item>
    </string-array>
    <string name="group">Group</string>
    <string name="hint_description">Write a short description</string>
    <string name="spend">Spend</string>
    <string name="income">Income</string>
    <string name="balance">Balance</string>
    <string name="no_group">Without group</string>
    <string name="hint_quantity">Amount (€)</string>
    <string name="Welcome">Home</string>
    <string name="Balance">Your Balance</string>
    <string name="Incomes">Income</string>
    <string name="Expenses">Expenses</string>
    <string name="home">Home</string>
    <string name="groups">Groups</string>
    <string name="statistics">Statistics</string>
    <string name="icon">Icon</string>
    <string name="color">Color</string>
    <string name="dinero_total">Total Money</string>
    <string name="total_types">Total of Types</string>
    <string name="last_month">Last Month</string>
    <string name="year">Year</string>
    <string name="goals">Goals</string>
    <string name="type_goal">Goal Type</string>
    <string name="space_time">Space of time</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="annual">Annual</string>
    <string name="no_spend">Don\'t Spend</string>
    <string name="save_money">Save</string>
    <string name="positive_balance">Positive Balance</string>
    <string name="borrado_registro">Do you want to remove the registry</string>
    <string name="new_registry">New Registry</string>
    <string name="new_goal">New Goal</string>
    <string name="new_group">New Group</string>
    <string name="editar_registro">Edit Registry</string>
    <string name="borrado_grupo">Do you want to remove the group</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="slogan">Each cent counts!</string>
    <string name="error">Error</string>
    <string name="group_created">Group created</string>
    <string name="goal_created">Goal created</string>
    <string name="error_cantidad_meta">A quantity is required for this goal.</string>
    <string name="error_label_grupo">A title is required to create a group.</string>
</resources>