<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:orientation="vertical"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="411dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewPager">

            <Button
                android:id="@+id/btNewEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nueva_entrada"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="335dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout">

        </androidx.viewpager.widget.ViewPager>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="256dp"
            android:background="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barra_hoy" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barra_semana" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barra_mes" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barra_año" />
        </com.google.android.material.tabs.TabLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>