<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/p_background"
    tools:context=".GrupoDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/panel_color"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icono_view"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/text_group_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingTop="10dp"
                    android:text="Grupo Details"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/dinero_total"
                android:textSize="18sp" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/group_barchart_totals"
                android:layout_width="match_parent"
                android:layout_height="364dp"
                android:background="@drawable/panel_color">

            </com.github.mikephil.charting.charts.BarChart>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/total_types"
                android:textSize="18sp" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/group_piechart_porcentajes"
                android:layout_width="match_parent"
                android:layout_height="364dp"
                android:background="@drawable/panel_color">

            </com.github.mikephil.charting.charts.PieChart>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/last_month"
                android:textSize="18sp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/group_month_record"
                android:layout_width="match_parent"
                android:layout_height="364dp"
                android:background="@drawable/panel_color">

            </com.github.mikephil.charting.charts.LineChart>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/year"
                android:textSize="18sp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/group_linechart_all"
                android:layout_width="match_parent"
                android:layout_height="364dp"
                android:background="@drawable/panel_color" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>